# MEngineV2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imGUI.md
Core/: CMakeLists.txt
Core/include/: Light.hpp  Material.hpp  MaterialManager.hpp  MaterialRespository.hpp  Math.hpp  Mesh.hpp  RingBuffer.hpp  TaskScheduler.hpp  Texture.hpp  TextureManager.hpp  UUID.hpp  Vertex.hpp
Core/include/Componet/: AssestComponent.hpp  CameraComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  TransformComponent.hpp
Core/include/Entity/: DirectionalLight.hpp  Entity.hpp  FBXModel.hpp  Light.hpp  PBRMaterial.hpp  Texture.hpp  Texture2D.hpp
Core/include/Entity/Interface/: IEntity.hpp  ILight.hpp  IMaterial.hpp  IModel.hpp  ITexture.hpp
Core/include/Material/: PBRMaterial.hpp
Core/include/Material/Interface/: IMaterial.hpp
Core/include/Repository/: MaterialRepository.hpp  PBRMaterialRepository.hpp  Repository.hpp  Texture2DRepository.hpp  TextureRepository.hpp
Core/include/Repository/Interface/: IReadOnlyRepository.hpp  IRepository.hpp  IStorage.hpp  IWriteRepository.hpp
Core/src/: Material.cpp  MaterialManager.cpp  MaterialRespository.cpp  Mesh.cpp  TaskScheduler.cpp  Texture.cpp  TextureManager.cpp  UUID.cpp  Vertex.cpp
Core/src/Componet/: MaterialComponent.cpp  MeshComponent.cpp  TransformComponent.cpp
Core/src/Entity/: PBRMaterial.cpp  Texture.cpp  Texture2D.cpp
Core/src/Material/: PBRMaterial.cpp
Core/src/Repository/: MaterialRespository.cpp  PBRMaterialRepository.cpp  Texture2DRepository.cpp  TextureRepository.cpp
Function/: CMakeLists.txt
Function/include/Component/: AssestComponent.hpp  CameraComponent.hpp  InputComponent.hpp  LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  TransformComponent.hpp
Function/include/Component/Interface/: IComponent.hpp
Function/include/Componet/: MaterialComponent.hpp  MaterialComponet.hpp  MeshComponent.hpp
Function/include/System/: CameraSystem.hpp  EditorRenderSystem.hpp  ISystem.hpp  InputSystem.hpp  RenderSystem.hpp  System.hpp  TransformSystem.hpp  UI.hpp  UISystem.hpp
Function/src/Componet/: MaterialComponent.cpp  MaterialComponet.cpp  MeshComponent.cpp
Function/src/System/: CameraSystem.cpp  EditorRenderSystem.cpp  InputSystem.cpp  RenderSystem.cpp  System.cpp  TransformSystem.cpp  UI.cpp  UISystem.cpp
Platform/: CMakeLists.txt  UML.wsd
Platform/include/: Buffer.hpp  BufferFactory.hpp  BufferManager.hpp  CommandBuffeFactory.hpp  CommandBuffeManager.hpp  Configure.hpp  Context.hpp  DescriptorManager.hpp  FrameBufferManager.hpp  GLFWWindow.hpp  Image.hpp  ImageFactory.hpp  ImageManager.hpp  Logger.hpp  MEngine.hpp  NoCopyable.hpp  Pipeline.hpp  PipelineLayout.hpp  PipelineLayoutManager.hpp  PipelineManager.hpp  RenderPassManager.hpp  SDLWindow.hpp  SamplerManager.hpp  ShaderManager.hpp  SharedHandle.hpp  SpdLogger.hpp  SwapchainManager.hpp  SyncPrimitiveFactory.hpp  SyncPrimitiveManager.hpp  Vertex.hpp
Platform/include/Interface/: IConfigure.hpp  ILogger.hpp  IWindow.hpp
Platform/src/: Buffer.cpp  BufferFactory.cpp  BufferManager.cpp  CommandBuffeFactory.cpp  CommandBuffeManager.cpp  Configure.cpp  Context.cpp  DescriptorManager.cpp  FrameBufferManager.cpp  Image.cpp  ImageFactory.cpp  ImageManager.cpp  Logger.cpp  Pipeline.cpp  PipelineLayoutManager.cpp  PipelineManager.cpp  RenderPassManager.cpp  SDLWindow.cpp  SamplerManager.cpp  ShaderManager.cpp  SpdLogger.cpp  SwapchainManager.cpp  SyncPrimitiveFactory.cpp
Resource/: CMakeLists.txt
Resource/Assets/: CMakeLists.txt
Resource/Config/: CMakeLists.txt  appsettings.json
Resource/Shader/: CMakeLists.txt  forward.frag  forward.vert  forwardOpaquePBR.frag  forwardOpaquePBR.frag.spv  forwardOpaquePBR.vert  forwardOpaquePBR.vert.spv  gBuffer.frag  gBuffer.frag.spv  gBuffer.vert  gBuffer.vert.spv  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert.spv  lighting.frag  lighting.frag.spv  lighting.vert  lighting.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  translucency.frag  translucency.frag.spv  translucency.vert  translucency.vert.spv
Resource/include/: MaterialManager.hpp  ResourceManager.hpp  TextureManager.hpp
Resource/include/BasicGeometry/: BasicGeometry.hpp  BasicGeometryEntityManager.hpp  BasicGeometryFactory.hpp  BasicGeometryManager.hpp  TriangleGeometry.hpp
Resource/src/: MaterialManager.cpp  ResourceManager.cpp  TextureManager.cpp
Resource/src/BasicGeometry/: BasicGeometryEntityManager.cpp  BasicGeometryManager.cpp  TriangleGeometry.cpp
Test/: CMakeLists.txt
Test/Core/: CMakeLists.txt  JsonTest.cpp  MemoryAlign.cpp  RingBufferTest.cpp  TaskSchedulerTest.cpp  UUIDTest.cpp
Test/Platform/: BufferTest.cpp  CMakeLists.txt  CommandBufferTest.cpp  ConfigureTest.cpp  LoggerTest.cpp  SharedPipelineLayoutTest.cpp  SharedPipelineTest.cpp  SharedPtrTest.cpp  loggerTest.cpp
Test/Tool/: CMakeLists.txt  DITest.cpp
Test/loggerTest/: CMakeLists.txt  main.cpp
Tool/: CMakeLists.txt
Tool/include/: Application.hpp  DefaultScene.hpp  IScene.hpp  Scene.hpp
Tool/include/BasicGeometry/: BasicGeometryEntityManager.hpp
Tool/include/Scene/: DefaultScene.hpp
Tool/src/: Application.cpp  DefaultScene.cpp  main.cpp
Tool/src/BasicGeometry/: BasicGeometryEntityManager.cpp  BasicGeometryFactory.cpp
Tool/src/Scene/: DefaultScene.cpp
