cmake_minimum_required(VERSION 3.20.0)
project(MEngine VERSION 0.1.0 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# 设置可执行文件的输出目录 (bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
# 设置动态库（共享库）的输出目录 (lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# 设置静态库的输出目录 (lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
if(WIN32)
    message("Platform: Windows")
    add_definitions(-DPLATFORM_WINDOWS)
elseif(UNIX)
    message("Platform: Unix")
    if(APPLE)
        message("Platform: MacOS")
        add_definitions(-DPLATFORM_MACOS)
    else()
        message("Platform: Linux")
        add_definitions(-DPLATFORM_LINUX)
    endif()
else()
    message("Platform: Unknown")
endif()

add_subdirectory(Tool)
add_subdirectory(Function)
add_subdirectory(Resource)
add_subdirectory(Core)
add_subdirectory(Platform)

#3rd party
add_subdirectory(3rdParty/spdlog)
add_subdirectory(3rdParty/googletest)
set(SDL_JOYSTICK OFF CACHE BOOL "Disable joystick support" FORCE)
set(SDL_JOYSTICK_DINPUT OFF CACHE BOOL "" FORCE)
set(SDL_JOYSTICK_XINPUT OFF CACHE BOOL "" FORCE)
set(SDL_JOYSTICK_RAWINPUT OFF CACHE BOOL "" FORCE)
set(SDL_HAPTIC OFF CACHE BOOL "" FORCE)
add_subdirectory(3rdParty/SDL)
add_subdirectory(3rdParty/VulkanMemoryAllocator)
add_subdirectory(3rdParty/entt)
add_subdirectory(3rdParty/glm)
add_subdirectory(3rdParty/magic_enum)
add_subdirectory(3rdParty/di)
add_subdirectory(3rdParty/json)
# add_subdirectory(3rdParty/rttr)
add_subdirectory(3rdParty/tinyexr)


# test
enable_testing()
add_subdirectory(Test)

